# LFS-Ayats

./: .pre-commit-config.yaml  .pylintrc  LICENSE  Makefile  README.md  bandit.yaml  config.json  index.html  main.py  mypy.ini  pyproject.toml  requirements-dev.txt  styles.css
.github/workflows/: ci.yml
data/: .gitignore
data/migrations/: 0001_initial.sql
docs/site/: index.html  styles.css
overlay/: electron-main.js  index.html  overlay.js  preload.js  style.css
src/: __init__.py  hud.py  insim_client.py  outsim_client.py  persistence.py  radar.py  telemetry_ws.py
src/audio/: __init__.py  beep_driver.py
tests/: conftest.py  overlay_delta_harness.js  test_beep.py  test_insim_client.py  test_outsim_orientation.py  test_outsim_security.py  test_overlay_delta_rendering.py  test_persistence.py  test_radar_targets.py  test_session_state.py  test_telemetry_ws.py
