[build-system]
requires = [
    "setuptools>=65",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203"]
exclude = ["docs", "tests/data"]

[tool.pylint.main]
py-version = "3.10"
fail-under = 9.0
jobs = 0

[tool.pylint.messages_control]
disable = [
    "missing-docstring",
    "too-few-public-methods"
]

[tool.pylint.basic]
extension-pkg-allow-list = []
good-names = ["dx", "dy", "dt"]

[tool.mypy]
python_version = "3.10"
mypy_path = ["src"]
files = ["src"]
warn_unused_configs = true
warn_return_any = true
ignore_missing_imports = true

[tool.bandit]
targets = ["src"]
exclude_dirs = ["tests", "docs"]
severity = "LOW"
confidence = "HIGH"
skip = ["B101"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["src", "tests", "main.py"]
